--- a/package.json
+++ b/package.json
@@ -23,5 +23,12 @@
     "multer": "^1.4.5-lts.1",
     "pg": "^8.11.0",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.43.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^16.0.1",
+    "eslint-plugin-promise": "^6.1.1"
   }
 }
